实现在鼠标释放处生成widget，也可以拖到任意位置

--- a/static/jsplumb/css/jsplumbtoolkit-demo.css
+++ b/static/jsplumb/css/jsplumbtoolkit-demo.css
@@ -53,10 +53,10 @@ body {
 }
 
 .jtk-demo-canvas {    
-    height:550px;
-    max-height:700px;
-    border:1px solid #CCC;
-    background-color:white;
+    // height:550px;
+    // max-height:700px;
+    // border:1px solid #CCC;
+    // background-color:white;
     display: flex;
 }
 
