--- a/static/jsplumb/css/demo.css
+++ b/static/jsplumb/css/demo.css
@@ -12,10 +12,10 @@
 /** ELEMENTS **/
 .drag-drop-demo .window {
     font-family: serif;
-    font-style: italic;
+    // font-style: italic;
     background-color: white;
     border: 1px solid #346789;
-    text-align: center;
+    // text-align: center;
     z-index: 24;
     cursor: pointer;
     box-shadow: 2px 2px 19px #aaa;
@@ -29,7 +29,7 @@
     padding-top: 5px;
     width: 140px;
     height: 120px;
-    line-height: 12px;
+    line-height: 24px;
     -webkit-transition: -webkit-box-shadow 0.15s ease-in;
     -moz-transition: -moz-box-shadow 0.15s ease-in;
     -o-transition: -o-box-shadow 0.15s ease-in;
